<resources>
    <string name="app_name">smt_map</string>
    <string name="title_home">Home</string>
    <string name="floor_plan">Floor Plan</string>
    <string name="title_notifications">Notifications</string>

    <string name="shop187">187</string>
    <string name="shop188">188</string>
    <string name="shop189">189</string>
    <string name="shop190">190</string>
    <string name="shop191">191-192</string>
    <string name="shop192">192</string>
    <string name="shop193">193</string>
    <string name="shop194">194</string>
    <string name="shop194A">194A</string>
    <string name="shop194B">194B</string>
    <string name="shop195A">195A</string>
    <string name="shop195B">195B</string>
    <string name="fully">Fully Occupied</string>
    <string name="partial">Partially Occupied</string>
    <string name="most">Mostly Occupied</string>
</resources>
