<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="fill_parent"
        android:layout_height="28dp"
        android:background="#F7686767"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:id="@+id/linearLayout2_red"
            android:layout_width="20dp"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:background="@drawable/top_bar_circle_red"
            android:orientation="vertical"
            android:padding="5dp"></LinearLayout>

        <TextView
            android:id="@+id/textView_fully"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/fully"
            android:textColor="#FFFFFFFF" />


        <LinearLayout
            android:id="@+id/linearLayout2_yellow"
            android:layout_width="20dp"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:background="@drawable/top_bar_circle_yellow"
            android:orientation="vertical"
            android:padding="5dp"></LinearLayout>

        <TextView
            android:id="@+id/textView_partial"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/partial"
            android:textColor="#FFFFFFFF" />

        <LinearLayout
            android:id="@+id/linearLayout2_green"
            android:layout_width="20dp"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:background="@drawable/top_bar_circle_green"
            android:orientation="vertical"
            android:padding="5dp"></LinearLayout>

        <TextView
            android:id="@+id/textViewMostly"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/most"
            android:textColor="#FFFFFFFF" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="985dp">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="65dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="104dp"
                    android:background="@drawable/border"
                    android:gravity="center"
                    android:text="@string/shop195B"
                    app:layout_constraintStart_toEndOf="@+id/textView5"
                    app:layout_constraintTop_toTopOf="@+id/imageView13" />

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="398dp"
                    android:layout_height="247dp"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="24dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_shop390" />

                <ImageView
                    android:id="@+id/imageView10"
                    android:layout_width="158dp"
                    android:layout_height="86dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="53dp"
                    android:background="#00FF0505"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/textView"
                    app:srcCompat="@drawable/ic_shop387" />

                <ImageView
                    android:id="@+id/imageView13"
                    android:layout_width="165dp"
                    android:layout_height="109dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="28dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/imageView10"
                    app:srcCompat="@drawable/ic_shop386" />

                <ImageView
                    android:id="@+id/imageView17"
                    android:layout_width="179dp"
                    android:layout_height="119dp"
                    android:layout_marginTop="38dp"
                    android:layout_marginEnd="8dp"
                    android:rotation="0"
                    android:scaleX="-1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/textView2"
                    app:srcCompat="@drawable/ic_shop386" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="138dp"
                    android:layout_height="58dp"
                    android:layout_marginStart="33dp"
                    android:layout_marginTop="175dp"
                    android:background="@drawable/border"
                    android:gravity="center"
                    android:text="@string/shop195B"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/imageView7" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="100dp"
                    android:layout_height="55dp"
                    android:layout_marginTop="176dp"
                    android:layout_marginEnd="69dp"
                    android:background="@drawable/border"
                    android:gravity="center"
                    android:text="@string/shop195B"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/imageView7" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="153dp"
                    android:layout_height="106dp"
                    android:layout_marginTop="112dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/border"
                    android:gravity="center"
                    android:text="@string/shop195B"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/imageView17" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="75dp"
                    android:layout_height="248dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/border"
                    android:gravity="center"
                    android:text="@string/shop195B"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView3" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="65dp"
                    android:layout_height="160dp"
                    android:layout_marginStart="33dp"
                    android:layout_marginTop="104dp"
                    android:background="@drawable/border"
                    android:gravity="center"
                    android:text="@string/shop195B"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/imageView13" />

                <ImageView
                    android:id="@+id/imageView20"
                    android:layout_width="34dp"
                    android:layout_height="42dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="14dp"
                    android:background="@drawable/border"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/imageView7"
                    app:srcCompat="@drawable/ic_aiga_toiletsq_men" />

                <ImageView
                    android:id="@+id/imageView21"
                    android:layout_width="34dp"
                    android:layout_height="42dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="60dp"
                    android:background="@drawable/border"
                    app:layout_constraintBottom_toTopOf="@+id/textView3"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:srcCompat="@drawable/ic_toilet_women" />

                <ImageView
                    android:id="@+id/imageView22"
                    android:layout_width="34dp"
                    android:layout_height="42dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="14dp"
                    android:background="@drawable/border"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView20"
                    app:srcCompat="@drawable/ic_11954321481710250442wice_wheelchair" />

                <ImageView
                    android:id="@+id/imageView23"
                    android:layout_width="74dp"
                    android:layout_height="116dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView4"
                    app:srcCompat="@drawable/ic_aiga_elevator" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>